$Id$

****************************** DRUPAL 6 - 2.x BRANCH ********************************

July 8, 2010
------------
#768348 by Michelle: Moved node/comment link handling to hook_link and hook_link_alter.
#547824 by Michelle: When deleting a node from the node links, it now goes back to the front page like in core.

July 5, 2010 - ALPHA 3
------------
#821744 by Michelle: Updated Author Pane integration to work with beta 1.
#830102 by merlinofchaos: Added setting for 'Inject hierarchy of first term into breadcrumb trail' to forum page.
#832286 by Scyther: Allow users to see a signature in an input format they don't have access to.

May 27, 2010
------------
#787454 by berdir, mikey_p, merlinofchaos, and Michelle: Fixed error in SQL that caused new posts to be counted twice if revisions were on when the node was moved to another forum.
#801260 by dereine: advanced_forum_statistics_replies performance improved.

May 24, 2010
------------
#807742 by Michelle: Started work on documenting the templates.

May 11, 2010
------------
#793020 by Michelle: Fixed issue with no-style-name template file not being found.
#793664 by crea: Fixed Author Pane not showing on nodecomment reply preview.
#622670 by neclimdul: Fixed clipped folder icons when no posts in forum.

May 10, 2010
------------
#697234 by ericduran, nenne: Fixed issue with ampersand encoding in subforum list.
#791956 by friolator: Fixed missing closing bracked on comment anchor.
#583674 by Michelle: Confirmed and fixed regression with views column and 0 views.
#755940 by Michelle: Removed (hopefully!) unneeded a id forum-reply-NNN and removed suspected bad copy/paste line.
#769954 by Michelle, gege2061: Make sure there is a body field before trying to form alter it. Silly poll. :P

March 24, 2010
--------------
#741902 by Michelle: Added "forum" as a default type to be styled if settings form has never been submitted.

March 23, 2010
--------------